# ndk

./: Cargo.toml
.github/: dependabot.yml
.github/workflows/: publish.yml  rust.yml
cargo-apk/: Cargo.toml  README.md
cargo-apk/src/: apk.rs  error.rs
ndk/: Cargo.toml
ndk-build/: Cargo.toml
ndk-build/src/: manifest.rs
ndk-examples/: Cargo.toml
ndk-examples/examples/: media_codec.rs
ndk-glue/: Cargo.toml
ndk-glue/src/: lib.rs
ndk-macro/: Cargo.toml
ndk-sys/: CHANGELOG.md  Cargo.toml  generate_bindings.sh  wrapper.h
ndk-sys/src/: ffi_aarch64.rs  ffi_arm.rs  ffi_i686.rs  ffi_x86_64.rs
ndk/src/: binder.rs  event.rs  hardware_buffer.rs  hardware_buffer_format.rs  input_queue.rs  lib.rs
sample/: Cargo.toml
sample/src/: lib.rs  main.rs
