[package]
name = "cargo-apk"
version = "0.5.6"
authors = ["The Rust Windowing contributors"]
edition = "2018"
description = "Helps cargo build APKs"
license = "MIT OR Apache-2.0"
keywords = ["android", "ndk", "apk"]
documentation = "https://docs.rs/cargo-apk"
homepage = "https://github.com/rust-windowing/android-ndk-rs"
repository = "https://github.com/rust-windowing/android-ndk-rs"

[dependencies]
anyhow = "1"
cargo-subcommand = "0.5"
dunce = "1.0"
env_logger = "0.8"
log = "0.4"
ndk-build = { path = "../ndk-build", version = "0.1.4" }
serde = "1"
thiserror = "1"
toml = "0.5"
