[package]
name = "ndk-build"
version = "0.1.4"
authors = ["The Rust Windowing contributors"]
edition = "2018"
description = "Utilities for building Android binaries"
license = "MIT OR Apache-2.0"
keywords = ["android", "ndk", "apk"]
documentation = "https://docs.rs/android-build-tools"
homepage = "https://github.com/rust-windowing/android-ndk-rs"
repository = "https://github.com/rust-windowing/android-ndk-rs"

[dependencies]
dirs = "3"
dunce = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
which = "4"
