[package]
name = "ndk-glue"
version = "0.6.2"
authors = ["The Rust Windowing contributors"]
edition = "2018"
description = "Startup code for android binaries"
license = "MIT OR Apache-2.0"
keywords = ["android", "ndk"]
readme = "README.md"
documentation = "https://docs.rs/ndk-glue"
homepage = "https://github.com/rust-windowing/android-ndk-rs"
repository = "https://github.com/rust-windowing/android-ndk-rs"
# https://github.com/rust-windowing/android-ndk-rs/pull/282#issuecomment-1152977094
# Needed for `const fn` `RwLock::new()` constructors
rust-version = "1.61.0"

[dependencies]
android_logger = { version = "0.10.1", optional = true }
libc = "0.2.84"
log = "0.4.14"
ndk = { path = "../ndk", version = "0.6.0" }
ndk-context = { path = "../ndk-context", version = "0.1.1" }
ndk-macro = { path = "../ndk-macro", version = "0.3.0" }
ndk-sys = { path = "../ndk-sys", version = "0.3.0" }
once_cell = "1"
parking_lot = "0.12"

[features]
default = []
test = ["ndk/test", "ndk-sys/test"]
logger = ["android_logger", "ndk-macro/logger"]

[package.metadata.docs.rs]
targets = [
    "aarch64-linux-android",
    "armv7-linux-androideabi",
    "i686-linux-android",
    "x86_64-linux-android",
]
