[package]
name = "ndk-macro"
version = "0.2.0"
authors = ["The Rust Windowing contributors"]
edition = "2018"
description = "Helper macros for android ndk"
license = "MIT OR Apache-2.0"
keywords = ["android", "ndk"]
readme = "README.md"
documentation = "https://docs.rs/ndk-macro"
homepage = "https://github.com/rust-windowing/android-ndk-rs"
repository = "https://github.com/rust-windowing/android-ndk-rs"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = ""
proc-macro-crate = "0.1"
quote = "1"
syn = { version = "1", features = ["full"] }
darling = "0.12"

[features]
default = []
logger = []
